--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ window.Quarto = {
 <span class="menu-text">About</span></a>
   </li>  
   <li class="nav-item compact">
-    <a class="nav-link" href="https://github.com/"> <i class="bi bi-github" role="img">
+    <a class="nav-link" href="https://github.com/sklein0489/sklein0489.github.io"> <i class="bi bi-github" role="img">
 </i> 
 <span class="menu-text"></span></a>
   </li>  
@@ -210,10 +210,10 @@ window.Quarto = {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="Zm9vdGJhbGwlMkNuZmwlMkNzdGVlbGVycw==" data-listing-date-sort="1712898000000" data-listing-file-modified-sort="1743721112384" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="15">
+<div class="quarto-post image-right" data-index="0" data-categories="Zm9vdGJhbGwlMkNuZmwlMkNzdGVlbGVycw==" data-listing-date-sort="1712898000000" data-listing-file-modified-sort="1743722422023" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="15">
 <div class="thumbnail">
 <p><a href="./posts/pittsburgh-steelers-killer-bs/index.html" class="no-external"></a></p><a href="./posts/pittsburgh-steelers-killer-bs/index.html" class="no-external">
-<p><img loading="lazy" src="./posts/pittsburgh-steelers-killer-bs/killer_b's.jpg" class="thumbnail-image"></p>
+<p><img loading="lazy" src="./posts/pittsburgh-steelers-killer-bs" class="thumbnail-image"></p>
 </a><p><a href="./posts/pittsburgh-steelers-killer-bs/index.html" class="no-external"></a></p>
 </div>
 <div class="body">
