--- a/index.html
+++ b/index.html
@@ -210,10 +210,10 @@ window.Quarto = {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="Zm9vdGJhbGwlMkNuZmwlMkNzdGVlbGVycw==" data-listing-date-sort="1712898000000" data-listing-file-modified-sort="1743722422023" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="15">
+<div class="quarto-post image-right" data-index="0" data-categories="Zm9vdGJhbGwlMkNuZmwlMkNzdGVlbGVycw==" data-listing-date-sort="1712898000000" data-listing-file-modified-sort="1744326319948" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="4" data-listing-word-count-sort="798">
 <div class="thumbnail">
 <p><a href="./posts/pittsburgh-steelers-killer-bs/index.html" class="no-external"></a></p><a href="./posts/pittsburgh-steelers-killer-bs/index.html" class="no-external">
-<p><img loading="lazy" src="./posts/pittsburgh-steelers-killer-bs" class="thumbnail-image"></p>
+<p><img loading="lazy" src="./posts/pittsburgh-steelers-killer-bs/image.png" class="thumbnail-image"></p>
 </a><p><a href="./posts/pittsburgh-steelers-killer-bs/index.html" class="no-external"></a></p>
 </div>
 <div class="body">
