--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@ ul.task-list li input[type="checkbox"] {
 <script src="site_libs/quarto-html/tippy.umd.min.js"></script>
 <script src="site_libs/quarto-html/anchor.min.js"></script>
 <link href="site_libs/quarto-html/tippy.css" rel="stylesheet">
-<link href="site_libs/quarto-html/quarto-syntax-highlighting-dark-b53751a350365c71b6c909e95f209ed1.css" rel="stylesheet" id="quarto-text-highlighting-styles">
+<link href="site_libs/quarto-html/quarto-syntax-highlighting-2f5df379a58b258e96c21c0638c20c03.css" rel="stylesheet" id="quarto-text-highlighting-styles">
 <script src="site_libs/bootstrap/bootstrap.min.js"></script>
 <link href="site_libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
-<link href="site_libs/bootstrap/bootstrap-2e5d96fb14be54a3755fd981cb5888cc.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="dark">
+<link href="site_libs/bootstrap/bootstrap-df479d6c4d77d0e0dfbcb5361179d7fd.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
 <script id="quarto-search-options" type="application/json">{
   "location": "navbar",
   "copy-button": false,
@@ -210,7 +210,7 @@ window.Quarto = {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="Zm9vdGJhbGwlMkNuZmwlMkNzdGVlbGVycw==" data-listing-date-sort="1712898000000" data-listing-file-modified-sort="1744331140228" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="4" data-listing-word-count-sort="753">
+<div class="quarto-post image-right" data-index="0" data-categories="Zm9vdGJhbGwlMkNuZmwlMkNzdGVlbGVycw==" data-listing-date-sort="1713070800000" data-listing-file-modified-sort="1744589397563" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="12" data-listing-word-count-sort="2267">
 <div class="thumbnail">
 <p><a href="./posts/pittsburgh-steelers-killer-bs/index.html" class="no-external"></a></p><a href="./posts/pittsburgh-steelers-killer-bs/index.html" class="no-external">
 <p><img loading="lazy" src="./posts/pittsburgh-steelers-killer-bs/image.png" class="thumbnail-image"></p>
@@ -218,7 +218,7 @@ window.Quarto = {
 </div>
 <div class="body">
 <h3 class="no-anchor listing-title">
-<a href="./posts/pittsburgh-steelers-killer-bs/index.html" class="no-external">Are the Steelers’ Killer Bs trio of Ben Roethlesburger, Antonio Brown, and Le’Veon Bell the greatest offensive trio to never win a Super Bowl?</a>
+<a href="./posts/pittsburgh-steelers-killer-bs/index.html" class="no-external">Why did the Killer B’s never win a Super Bowl?</a>
 </h3>
 <div class="listing-subtitle">
 <a href="./posts/pittsburgh-steelers-killer-bs/index.html" class="no-external"></a>
@@ -241,7 +241,7 @@ steelers
 <div class="metadata">
 <a href="./posts/pittsburgh-steelers-killer-bs/index.html" class="no-external">
 <div class="listing-date">
-Apr 12, 2024
+Apr 14, 2024
 </div>
 <div class="listing-author">
 Sam Klein
