--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ window.Quarto = {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="Zm9vdGJhbGwlMkNuZmwlMkNzdGVlbGVycw==" data-listing-date-sort="1713070800000" data-listing-file-modified-sort="1744589397563" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="12" data-listing-word-count-sort="2267">
+<div class="quarto-post image-right" data-index="0" data-categories="Zm9vdGJhbGwlMkNuZmwlMkNzdGVlbGVycw==" data-listing-date-sort="1713070800000" data-listing-file-modified-sort="1744675303439" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="16" data-listing-word-count-sort="3144">
 <div class="thumbnail">
 <p><a href="./posts/pittsburgh-steelers-killer-bs/index.html" class="no-external"></a></p><a href="./posts/pittsburgh-steelers-killer-bs/index.html" class="no-external">
 <p><img loading="lazy" src="./posts/pittsburgh-steelers-killer-bs/image.png" class="thumbnail-image"></p>
@@ -235,7 +235,7 @@ steelers
 </div>
 </div>
 <div class="listing-description">
-<a href="./posts/pittsburgh-steelers-killer-bs/index.html" class="no-external">The Pittsburgh Steelers are the best team in the NFL by far (no bias here).</a>
+<a href="./posts/pittsburgh-steelers-killer-bs/index.html" class="no-external">The Pittsburgh Steelers are one of the most storied franchises in the NFL, with their 6 Super Bowls tying the Patriots for the most in the league. In recent years, however…</a>
 </div>
 </div>
 <div class="metadata">
